Count empty fuzzy as empty only (not as fuzzy too)

BUG: 311000