src/catalog/catalog.cpp
@@ -139,6 +139,7 @@ void Catalog::clear()
     QUndoStack::clear();
     d._errorIndex.clear();
     d._nonApprovedIndex.clear();
+    d._nonApprovedNonEmptyIndex.clear();
     d._emptyIndex.clear();
     delete m_storage; m_storage = 0;
     d._filePath.clear();
@@ -370,16 +371,22 @@ void Catalog::updateApprovedEmptyIndexCache()
 
     //index cache TODO profile?
     d._nonApprovedIndex.clear();
+    d._nonApprovedNonEmptyIndex.clear();
     d._emptyIndex.clear();
 
     DocPosition pos(0);
     const int limit = m_storage->size();
     while (pos.entry < limit) {
-        if (!isApproved(pos))
-            d._nonApprovedIndex << pos.entry;
         if (m_storage->isEmpty(pos))
             d._emptyIndex << pos.entry;
-
+        if (!isApproved(pos))
+        {
+            d._nonApprovedIndex << pos.entry;
+            if (!m_storage->isEmpty(pos))
+            {
+                d._nonApprovedNonEmptyIndex << pos.entry;
+            }
+        }
         ++(pos.entry);
     }
 
@@ -910,9 +917,16 @@ TargetState Catalog::setState(const DocPosition& pos, TargetState state)
     }
 
     if (!approved)
+    {
         insertInList(d._nonApprovedIndex, pos.entry);
+        if (!m_storage->isEmpty(pos))
+            insertInList(d._nonApprovedNonEmptyIndex, pos.entry);
+    }
     else
+    {
         d._nonApprovedIndex.removeAll(pos.entry);
+        d._nonApprovedNonEmptyIndex.removeAll(pos.entry);
+    }
 
     emit signalNumberOfFuzziesChanged();
     emit signalEntryModified(pos);
